# AuRa

./: .gitignore  DAVID_PROMPT.json  README.md  USER_GUIDE.md  config.yaml  pyproject.toml
.github/workflows/: python-package-conda.yml
android/: buildozer.spec  engine.py  main.py
aura/: __init__.py  cli.py  process.py
aura/core/: __init__.py
aura/core/data/: expanded_templates.py  generator.py
aura/core/export/: exporter.py  gguf_export.py
aura/core/gdt/: __init__.py  engine.py
aura/core/inference/: __init__.py  engine.py  lite_engine.py
aura/core/model/: __init__.py  architecture.py
aura/core/sovereign/: __init__.py  brain.py  knowledge_base.py
aura/core/tokenizer/: __init__.py  byte_tokenizer.py
aura/core/training/: train.py
aura/plugins/: __init__.py
aura/plugins/compiler/: __init__.py  middleware.py
aura/plugins/esp32/: __init__.py  model.py
aura/plugins/jetkvm/: __init__.py
aura/plugins/signal/: __init__.py  processor.py
aura/plugins/ui/: __init__.py  app.py
aura/plugins/ui/web/: server.py
aura/plugins/voice/: __init__.py  bridge.py
models/: Modelfile  README.md  aura.gguf  esp32_model_final.pt  model.json
scripts/: install_termux.sh
